# dancam

./: .env.example  .gitignore  AGENTS.md  Justfile  README.md  book.toml  flake.nix
.claude/: settings.json  settings.local.json
app/: AGENTS.md
contract/events/: README.md  camera_state_changed.json  clip_finalized.json  clip_removed.json  commissioning_changed.json  cpu_changed.json  heartbeat.json  mem_changed.json  recorder_failed.json  recording_started.json  recording_starting.json  recording_stopped.json  recording_stopping.json  segment_opened.json  snapshot.json  storage_changed.json  temp_changed.json  time_synced.json
docs/: SUMMARY.md  hardware.md  overview.md  references.md  roadmap.md
docs/battle-notes/: 2026-07-02-ffmpeg-first-segment-latency.md
docs/reference/: events.md
docs/research/: 1-rust-camera-owner.md  2-fmp4-container-measurement.md  3-first-segment-delay-and-shutdown-timeout.md  4-fmp4-crash-recovery-deep-dive.md
docs/setup/: pi-runbook.md
plans/impl/: 2026-06-24-1341-app-ui-tea-oak-scaffold.md  2026-06-24-mock-pi-health-service.md  2026-06-24-sequence-adr-filenames.md  2026-06-25-0930-target-trixie-networkmanager-ap.md  2026-06-25-1756-pin-ap-wpa2-aes.md  (+112 more)
prompts/: video-system-review.md
raspi/: AGENTS.md  README.md  dancam.service  deploy.sh
raspi/service/: Cargo.toml
raspi/service/assets/clips/: seg_00000.ts
raspi/service/src/: backend.rs  clips.rs  clock.rs  commissioning.rs  cpu.rs  event_hub.rs  events.rs  filesystem_observer.rs  gc.rs  health.rs  jpeg.rs  lib.rs  main.rs  mutation.rs  preview.rs  recorder.rs  recording.rs  status.rs  storage.rs  sysfacts.rs  time_sync.rs  ts_duration.rs  world.rs
raspi/service/src/camera/: mod.rs
raspi/service/tests/: camera_process.rs  clips.rs  events.rs  health.rs  mock_recording.rs  operational_status.rs  preview.rs  recording.rs  request_id.rs  shutdown.rs  status.rs  time.rs
scripts/: check-adrs.sh  fetch-references.sh  pi-mem.sh  references-pi-version.sh
(+360 files in other folders)
