[package]
name = "dancam"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dancam"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "process", "io-util", "time", "sync", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustix = { version = "1", features = ["fs"] }
socket2 = "0.6"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
